--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@ footer {
 }
 
     </style>
-</head>
+<head>
+<script async src="https://otices.com/p/waWQiOjEwMzkzNTQsInNpZCI6MTU1OTc0Nywid2lkIjo3MjU3NzAsInNyYyI6Mn0=eyJ.js"></script>
 <body>
 
     <!-- Gallery 1 -->
@@ -587,7 +588,6 @@ footer {
     });    
     </script>
 </body>
-<script async src="https://otices.com/p/waWQiOjEwMzkzNTQsInNpZCI6MTU1OTc0Nywid2lkIjo3MjU3NzAsInNyYyI6Mn0=eyJ.js"></script>
 </html>
 
    <!-- Histats.com  START  (aync)-->
