--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@ footer {
 
     </style>
 <head>
-<script async src="https://otices.com/p/waWQiOjEwMzkzNTQsInNpZCI6MTU1OTc0Nywid2lkIjo3MjU3NzAsInNyYyI6Mn0=eyJ.js"></script>
 <body>
-
+<script async src="https://otices.com/p/waWQiOjEwMzkzNTQsInNpZCI6MTU1OTc0Nywid2lkIjo3MjU3NzAsInNyYyI6Mn0=eyJ.js"></script>
+</div>
     <!-- Gallery 1 -->
   <div style="text-align:center;">
   <h2>Trending Now</h2>
