--- a/index.html
+++ b/index.html
@@ -497,6 +497,10 @@ footer {
     <script async="async" data-cfasync="false" src="//pl26898829.profitableratecpm.com/0e97c7a948064ca0c2f9d4773999b923/invoke.js"></script>
 <div id="container-0e97c7a948064ca0c2f9d4773999b923"></div>
 
+<head>
+<meta name="juicyads-site-verification" content="3f05362c362df39ccae434a43c7c56d6">
+<head>	  
+
 <footer>
   <p>&copy; 2025 Videy.co. All rights reserved.</p>
 </footer>
