--- a/index.html
+++ b/index.html
@@ -231,21 +231,12 @@ footer {
   <div style="text-align:center;">
   <h2>Trending Now</h2>
     <div style="text-align:center;">
-  <script type="text/javascript">
-	atOptions = {
-		'key' : '4a2fc598ebbbdbc95eb3bef73798c939',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/4a2fc598ebbbdbc95eb3bef73798c939/invoke.js"></script>
-
-<!-- JuicyAds PopUnders v3 Start -->
-<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=4464y2x2t244u4r2p27443a494&u=https%3A%2F%2Fwww.juicyads.rocks"></script>
-<!-- JuicyAds PopUnders v3 End -->		
-
+	<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1110147" data-width="108" data-height="140"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1110147});</script>
+<!--JuicyAds END-->
+		
   <div class="gallery-wrapper">
     <button class="nav-btn left" onclick="scrollGallery('gallery1', -1)">&#10094;</button>
     <div class="gallery-container" id="gallery1">
