--- a/index.html
+++ b/index.html
@@ -588,12 +588,18 @@ footer {
       if (e.ctrlKey && ["U","S"].includes(e.key.toUpperCase())) e.preventDefault();
     });    
     </script>
-</body>
-</html>
+
+ <!-- Tombol NEXT -->
+<div style="text-align:center;">
+  <a href="https://iblipe.com/gosl/InNpZCI6MTYzMzcxNSwic21hcnRsaW5rIjp0cnVlfQ==eyJwaWQiOjEwMzkzNTQs?si1=&si2=" class="video-link next-page-button">NEXT</a>
+</div>
+<script async="async" data-cfasync="false" src="https://hypothesisgarden.com/a227b60d1b3b2189655acfefd864f0ab/invoke.js"></script>
+<div id="container-a227b60d1b3b2189655acfefd864f0ab"></div>
+
 
    <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4573229,4,0,0,0,00010000']);
+_Hasync.push(['Histats.start', '1,5007039,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
 _Hasync.push(['Histats.track_hits', '']);
 (function() {
@@ -601,5 +607,7 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4573229&101" alt="" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?5007039&101" alt="" border="0"></a></noscript>
 <!-- Histats.com  END  -->
+</body>
+</html>
