--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ footer {
 
  <!-- Tombol NEXT -->
 <div style="text-align:center;">
-  <a href="https://iblipe.com/gosl/InNpZCI6MTYzMzcxNSwic21hcnRsaW5rIjp0cnVlfQ==eyJwaWQiOjEwMzkzNTQs?si1=&si2=" class="video-link next-page-button">NEXT</a>
+  <a href="https://juicyads.sexy/ref2.php?ref=214343&siteid=311758" class="video-link next-page-button">NEXT</a>
 </div>
 
 
